tests/ui/mismatched_types/similar_paths_primitive.stderr
error[E0308]: mismatched types
  --> $DIR/similar_paths_primitive.rs:8:9
   |
LL |     foo(true);
   |     --- ^^^^ expected `bool`, found a different `bool`
   |     |
   |     arguments to this function are incorrect
   |
   = note: bool and `bool` have similar names, but are actually distinct types
   = note: bool is a primitive defined by the language
note: `bool` is defined in the current crate
  --> $DIR/similar_paths_primitive.rs:3:1
   |
LL | struct bool;
   | ^^^^^^^^^^^
note: function defined here
  --> $DIR/similar_paths_primitive.rs:5:4
   |
LL | fn foo(_: bool) {}
   |    ^^^ -------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
